syntax = "proto3";
package pb;

option go_package = ".;pb";

message GetKeyRequest {
    string bucket = 1;
    string key = 2;
}

message GetKeyResponse {
    int64 errCode = 1;
    bytes value = 2;
}

message SetKeyRequest {
    string bucket = 1;
    string key = 2;
    bytes value = 3;
}

message SetKeyResponse {
    int64 errCode = 1;
}

message DeleteKeyRequest {
    string bucket = 1;
    string key = 2;
}

message DeleteKeyResponse {
    int64 errCode = 1;
}

message DeleteBucketRequest {
    string bucket = 1;
}

message DeleteBucketResponse {
    int64 errCode = 1;
}

service CacheServer {
    rpc Get(GetKeyRequest) returns (GetKeyResponse);
    rpc Set(SetKeyRequest) returns (SetKeyResponse);
    rpc Delete(DeleteKeyRequest) returns (DeleteKeyResponse);
    rpc DeleteBucket(DeleteBucketRequest) returns (DeleteBucketResponse);
}
